# quadrupednav_ros2

./: CMakeLists.txt  icra instructions 2  package.xml  queryfunctions.cpp
launch/: icra2023_mapping.launch  icra2023_mapping2.launch  quadcontroller.launch  quadcontroller.launch.py
matlab/: drawRobot.m  fileloader.asv  fileloader.m  filterVec.m  main.m  plotPath.asv  plotPath.m  processCell.m  processMessageTable.m  vectorField.m
src/: controller.cpp  controller.h  graph.cpp  graph.h  plannerfunctions.cpp  plannerfunctions.h  test.txt  utils.cpp  utils.h
src/quadprogpp/src/: Array.hh  main  main.cc
